src/test/ui/token/issue-15980.stderr
error: expected identifier, found keyword `return`
  --> $DIR/issue-15980.rs:20:13
   |
18 |         Err(ref e) if e.kind == io::EndOfFile {
   |                                 ------------- while parsing this struct
19 |             //~^ NOTE while parsing this struct
20 |             return
   |             ^^^^^^ expected identifier, found keyword

error: expected one of `.`, `=>`, `?`, or an operator, found `_`
  --> $DIR/issue-15980.rs:25:9
   |
23 |         }
   |          - expected one of `.`, `=>`, `?`, or an operator here
24 |         //~^ NOTE expected one of `.`, `=>`, `?`, or an operator here
25 |         _ => {}
   |         ^ unexpected token

error[E0412]: cannot find type `IoResult` in module `io`
  --> $DIR/issue-15980.rs:14:16
   |
14 |     let x: io::IoResult<()> = Ok(());
   |                ^^^^^^^^ did you mean `Result`?

error: aborting due to 3 previous errors

